<resources>
    <string name="app_name">PONG</string>
    <string name="Up">↑</string>
    <string name="Down">↓</string>
    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>
    <string name="Score1">Score</string>
    <string name="Score2">Score</string>
    <string name="PONG">PONG</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Rules</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>